fix(design): align header tabs with bottom of header

--- a/src/scss/components/header.scss
+++ b/src/scss/components/header.scss
@@ -88,8 +88,13 @@
       }
     }
 
+    .header-tabs-container {
+      display: flex;
+    }
+
     .header-tabs {
       display: block;
+      align-self: flex-end;
 
       @media (min-width: $viewport-md) {
         display: inline-block;
